--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,16 +5,16 @@ on:
       - main
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    # runs-on: ubuntu-20.04
     steps:
       - name: Checkout source code.
         uses: actions/checkout@v2
       - name: Install dependencies
         run: npm install
-        working-directory: ./aws-prac
+        # working-directory: ./aws-prac
       - name: Build
         run: npm run build
-        working-directory: ./aws-prac
+        # working-directory: ./aws-prac
       - name: SHOW AWS CLI VERSION
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
