--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,12 +9,13 @@ jobs:
     steps:
       - name: Checkout source code.
         uses: actions/checkout@v2
+
       - name: Install dependencies
         run: npm install
-        # working-directory: ./aws-prac
+
       - name: Build
-        run: npm run build
-        # working-directory: ./aws-prac
+        run: npm build
+
       - name: SHOW AWS CLI VERSION
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -22,6 +23,7 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
         run: |
           aws --version
+          
       - name: Sync Bucket
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -32,4 +34,3 @@ jobs:
             --region ap-northeast-2 \
             build s3://week16-home-prac \
             --delete
-        working-directory: ./aws-prac
