--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm build
+        run: npm run build
 
       - name: SHOW AWS CLI VERSION
         env:
@@ -23,7 +23,7 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
         run: |
           aws --version
-          
+
       - name: Sync Bucket
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
